# go-shapes

./: .gitignore  .gitignore~  .travis.yml  .travis.yml~  DeveloperDocs.md  README.md  README.md~  dev_report.txt  production_report.txt  production_report_error_trace.txt  report.txt
java/: .project  README.md  README.md~  pom.xml  report_file.txt
ontology/: catalog-for-validation.xml
python/: Makefile  README.md  go_context.json  gocam_validator.py  json_export.py  pyproject.toml  requirements.txt  shex_dump.json  shex_json_linkml.json  shex_json_linkml.py  shex_json_linkml.ts  shex_json_test_data.json  shex_terms_metadata_linkml.py  shex_to_json_playground.ipynb  test_json_export.py
python/schema/: shex_json_linkml.yaml  shex_terms_metadata_json_linkml.yaml
python/tests/: json_export.py  test_against_examples.py  test_json_export.py
python/tests/data/: f-1-multiple-enabled-by.ttl  f-1-multiple-enabled-by.ttlite  f-1-multiple-occurs-in.ttl  f-1-multiple-occurs-in.ttlite  f-1-occurs_in-gp.ttl  f-1-occurs_in-gp.ttlite  f-1-two-enabled_by.ttl  f-1-two-enabled_by.ttlite  flatten_shex_test_data.json  p-1.ttl  p-1.ttlite  p-bp-only.ttl  p-bp-only.ttlite  prefixes.ttl  shex_json_test_data.json
scala/: Makefile  README.md  enrich-with-superclasses.sc
schema/: autogen_schema.yaml  shex_json_linkml.yaml  shex_linkml.yaml
shapes/: GO_Shape_test.shex  MF_should.shex  WIP_standard_annot_ShEx  biolink-model.shex  go-cam-shapes.shapeMap  go-cam-shapes.shex  go-vpe-shapes.shex  gpad-shapes.shapeMap  gpad-shapes.shex  not_axiom_experimets.shex  tagged_graph.shex  (+1 more)
(+327 files in other folders)
