[tool.poetry]
name = "go-shapes"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
PyShEx = "^0.8.1"
rdflib = "^6.2.0"
SPARQLWrapper = "^2.0.0"
click = "^8.1.3"
cachier = "^1.5.4"
pydantic = "^1.10.2"
linkml-runtime = "^1.3.7"
prefixmaps = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
